--- a/assets/services/css/main.css
+++ b/assets/services/css/main.css
@@ -1,3 +1,13 @@
+body {
+		background:#ffffff
+	; color:#666666
+	; font-family: Arial, Helvetica, Verdana, Sans-serif;
+	; font-size:12px
+	; margin-left:auto
+	; margin-right:auto
+	; width:800px
+}
+
 h1 {
 		padding:0px
 	; font-size:50px
